test/classes/initializers/compilerGenerated/inherits_initializer_bad.good
inherits_initializer_bad.chpl:20: In function 'main':
inherits_initializer_bad.chpl:21: error: unresolved call 'Parent.init()'
inherits_initializer_bad.chpl:10: note: this candidate did not match: Parent.init(x1: int, x2: int)
inherits_initializer_bad.chpl:16: note: because call does not supply enough arguments
inherits_initializer_bad.chpl:10: note: it is missing a value for formal 'x1: int(64)'
